# web-rs

./: .actrc  .env  .gitignore  .pnp.cjs  BACKLINK_STRATEGY.md  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  dev.sh  package.json  robots.txt  samconfig.toml  settings.yaml  sitemap.xml  tailwind.config.js  template.yaml
.aws-sam/: build.toml
.github/workflows/: cd.yaml  ci.yaml  ci.yml
articles/: blog-wip-1.md  blog-wip-2.md  blog10.md  blog11.md  blog12.md  blog13.md  blog14.md  blog15.md  blog16.md  blog17.md  blog18.md  blog19.md  blog20-wip.md  blog20.md  blog21.md  blog4.md  blog5.md  blog6.md  blog7.md  blog8.md  blog9.md  generate.sh  test.md
assets/: background-animation.js  output.css  radar.js  radar.json  resume.json
assets/images/: README.md
assets/shaders/: background.frag
cloudfront/: index.html
examples/: example-request.json  pyproject.toml
examples/code-snippets/: README.md
examples/code-snippets/src/examples/: blog15.py
examples/nix-fastapi/: flake.nix
examples/nix-rust-dev-env/: flake.nix
examples/secret-harvester/: go.mod  main.go
examples/src/examples/: __init__.py  blog15.py
infrastructure/: main.tf
migrations/: 11_blog.sql  1_blog.sql  2_subscriber.sql  generate_metadata  generate_metadata.rs  temp
src/: main.rs
src/crud/: blog.rs  generate_metadata.rs  mod.rs  subscriber.rs
src/routes/: blog.rs  blogs.rs  handler_404.rs  health.rs  mod.rs  radar.rs  resume.rs  robots.rs  root.rs  search.rs  sitemap.rs  subscribe.rs
src/templates/: mod.rs  root.rs
src/utils/: db.rs  ingest.rs  mod.rs  parser.rs  settings.rs
templates/: base.html  blog.html  blogs-search-results.html  blogs.html  error.html  footer.html  header.html  index.html  input.css  landing-page.js  radar.html  radar.js  resume.html  search.html  social-sharing.html
templates/icons/: github.html  imdb.html  lastfm.html  linkedin.html  menu.html  radar.html  resume.html  spotify.html  stackoverflow.html
