[package]
name = "web-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_metadata"
path = "migrations/generate_metadata.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["markdown"] }
axum = "0.7.1"
chrono = "0.4.31"
dotenv = "0.15.0"
markdown = "0.3.0"
pulldown-cmark = "0.9.3"
regex = "1.10.2"
sqlx = { version = "0.7.3", features = ["time", "runtime-tokio", "postgres", "migrate"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = {version = "0.5.0", features = ["fs"]}
