[package]
name = "webrs"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["markdown"] }
axum = "0.7.1"
chrono = "0.4.31"
dotenv = "0.15.0"
include_dir = "0.7.3"
lambda_http = "0.9.2"
markdown = "0.3.0"
openssl = { version = "0.10.62", features = ["vendored"] }
pulldown-cmark = "0.9.3"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
serde_yaml = "0.9.32"
sqlx = { version = "0.7.3", features = ["time", "runtime-tokio", "postgres", "migrate", "tls-native-tls"] }
time = "0.3.31"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = {version = "0.5.0", features = ["fs"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
